fix(!rest): relation service rest api paths changed: for consistency and to avoid problems with a standard go router
